base/quay.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-app
  labels:
    quay-component: quay-app
spec:
  replicas: 1
  selector:
    matchLabels:
      quay-component: quay-app
  template:
    metadata:
      labels:
        quay-component: quay-app
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: configvolume
          secret:
            secretName: quay-config-secret
        # TODO(alecmerdler): Maybe we have this as a "dev" overlay...?
        # - name: quay-datastorage
        #   persistentVolumeClaim:
        #     claimName: quay-datastorage
      containers:
        - name: quay-app
          image: quay.io/projectquay/quay:3.8.4
          ports:
            - containerPort: 8443
            - containerPort: 8081
          volumeMounts:
            - name: configvolume
              readOnly: false
              mountPath: /conf/stack
            # - name: quay-datastorage
            #   mountPath: /datastorage
